# calculadora-actions

./: .coverage  README.md  calculadora.py  pokemon.py  pyproject.toml  test_calculadora.py  test_pokemon.py
.github/: branch-protection.yml
.github/workflows/: ci.yml
