[tool.poetry]
name = "pytest-simple"
version = "0.1.0"
description = "Proyecto súper simple para aprender pytest"
authors = ["Tu Nombre <tu.email@example.com>"]
packages = [{include = "*.py", from = "."}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.9.0"
flake8 = "^6.1.0"
pre-commit = "^3.4.0"

[tool.pytest.ini_options]
# Configuración específica para este proyecto
testpaths = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=calculadora --cov-report=term-missing"

[tool.coverage.run]
source = ["."]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 